# cfd

./: .gitignore  CMakeLists.txt  README.md
heat_conduction/: @  grid.cpp  grid.h  heat_equation.cpp  heat_equation.h  input_variables.h  lapack_interface.h  main.cpp  matrix.cpp  matrix.h  solution.cpp  solution.h  solver.h
linear_advection/: cmds.gnuplot  gen_plots.bash  lapack_interface.h  main.cpp  matrix.cpp  matrix.h
notes/: fluids_1dim_euler.tex
onedim_exact/: main.cpp
onedim_numeric/: lapack_interface.h  main.cpp  matrix.cpp  matrix.h
scripts/: area_mach.py
